[package]
authors = ["JN.X <xyanyue@gmail.com>"]
description = "Short text clustering  for determining center points and correlation judgment [one-hot,Jenks Natural Breaks]"
edition = "2021"
keywords = ["cluster", "shorttext", "correlation"]
license = "BSD-3-Clause"
name = "CFDTCP"
repository = "https://github.com/xyanyue/CFDTCP"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.1"
num-traits = "0.2.15"
rand = "0.8.5"
roaring = "0.10.1"
